--- a/10554-h/10554-h.htm
+++ b/10554-h/10554-h.htm
@@ -10789,6 +10789,6 @@ slab of omelette.</p>
 
 <p>“Very good, sir.”</p>
 
-<div>*** END OF THE PROJECT GUTENBERG EBOOK 10554 ***</div>
+</body>
 </html>
 
